fix back2topBtn z-index

--- a/src/entry/style/components/component.scss
+++ b/src/entry/style/components/component.scss
@@ -40,6 +40,7 @@ $rank-copper: #D58B00;
   width: fit-content;
   position: absolute;
   margin: 2rem;
+  z-index: 500;
 }
 
 /* ボタン（青・白） */
